fix ingress-nginx namespace

--- a/.github/taskfiles/talos.tasks.yaml
+++ b/.github/taskfiles/talos.tasks.yaml
@@ -59,6 +59,7 @@ tasks:
       - task: approve-certs
       - task: cilium-bootstrap
       - task: enable-vmtools
+      - task: :cluster:init
 
   deploy-cluster:
     desc: Deploy Talos cluster to vCenter
