--- a/kubernetes/apps/security-system/external-secrets/stores/cluster-secret-store.yaml
+++ b/kubernetes/apps/security-system/external-secrets/stores/cluster-secret-store.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   provider:
     onepassword:
-      connectHost: ${OP_CONNECT_HOST}
+      connectHost: http://onepassword-connect.security-system.svc.cluster.local.:8080
       vaults:
         ${OP_CONNECT_VAULT}: 1
       auth:
