--- a/kubernetes/apps/ingress-nginx/app/kustomizeconfig.yaml
+++ b/kubernetes/apps/ingress-nginx/app/kustomizeconfig.yaml
@@ -3,5 +3,5 @@ nameReference:
   - kind: ConfigMap
     version: v1
     fieldSpecs:
-      - path: spec/valuesFrom/name
-        kind: HelmRelease
+      - kind: HelmRelease
+        path: spec/valuesFrom/name
