--- a/kubernetes/apps/security-system/onepassword-connect/app/hr.yaml
+++ b/kubernetes/apps/security-system/onepassword-connect/app/hr.yaml
@@ -3,6 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: onepassword-connect
+  namespace: security-system
 spec:
   interval: 30m
   chart:
