fix namespace reference in ingress-nginx

--- a/kubernetes/apps/ingress-nginx/app/common-values.yaml
+++ b/kubernetes/apps/ingress-nginx/app/common-values.yaml
@@ -36,6 +36,6 @@ controller:
     enabled: true
     serviceMonitor:
       enabled: true
-      namespace: "ingress"
+      namespace: "ingress-nginx"
       namespaceSelector:
         any: true
