--- a/kubernetes/apps/security-system/onepassword-connect/app/hr.yaml
+++ b/kubernetes/apps/security-system/onepassword-connect/app/hr.yaml
@@ -110,7 +110,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: internal
+        className: nginx-internal
         annotations:
           hajimari.io/enable: "false"
         hosts:
