--- a/kubernetes/apps/ingress-nginx/app/kustomization.yaml
+++ b/kubernetes/apps/ingress-nginx/app/kustomization.yaml
@@ -1,16 +1,17 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-configMapGenerator:
-  - name: "ingress-nginx-helm-values"
-    namespace: "ingress-nginx"
-    files:
-      - common-values.yaml
-configurations:
-  - kustomizeconfig.yaml
+# configMapGenerator:
+#  - name: "ingress-nginx-helm-values"
+#    namespace: "ingress-nginx"
+#    files:
+#      - common-values.yaml
+#configurations:
+#  - kustomizeconfig.yaml
 resources:
   #- netpol.yaml
   #- default-backend.yaml
-  - hr-internal.yaml
+  #- hr-internal.yaml
+  - hr.yaml
   #- hr-external.yaml
   #- hr-public.yaml
